--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -51,3 +51,21 @@
   flex: 1 1 0%;
   justify-content: flex-end;
 }
+
+.launch {
+  display: inline-flex;
+  cursor: pointer;
+  align-items: center;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-size: 1.125rem;
+  line-height: 1.5rem;
+  border-radius: 9999px;
+  background: linear-gradient(
+    90deg,
+    rgb(60, 240, 184) 0%,
+    rgb(128, 240, 180) 100%
+  );
+}
