--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,30 +1,50 @@
 .root {
-  @apply bg-white text-zinc-800 cursor-pointer inline-flex px-10 rounded-sm leading-6  transition ease-in-out duration-150 shadow-sm font-semibold text-center justify-center uppercase py-4 border border-transparent items-center;
+  display: inline-flex;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  background-color: white ;
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  text-align: center;
+  font-weight: 600;
+  text-transform: uppercase;
+  line-height: 1.5rem;
+  color: black;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-duration: 150ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  border-radius: 0.125rem;
+  border-width: 1px;
+  border-color: transparent;
 }
 
 .root:hover {
-  @apply bg-zinc-800 text-white border border-white;
-}
-
-.root:focus {
-  @apply outline-none ring-2 ring-pink-500 ring-opacity-50;
+  background-color: black;
+  color: white;
+  border-color: white;
 }
 
 .root[data-active] {
-  @apply bg-zinc-600;
+  border-color: black;
 }
 
 .loading {
-  @apply bg-zinc-700 text-zinc-500 border-zinc-600 cursor-not-allowed;
+  cursor: not-allowed;
 }
 
 .slim {
-  @apply py-2 transform-none normal-case;
+  transform: none;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  text-transform: none;
 }
 
 .disabled,
 .disabled:hover {
-  @apply text-zinc-400 border-zinc-600 bg-zinc-700 cursor-not-allowed;
+  cursor: not-allowed;
   filter: grayscale(1);
   -webkit-transform: translateZ(0);
   -webkit-perspective: 1000;
