--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,111 +1,4 @@
 .main {
   padding: 4rem;
-  height: max-content;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.search {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-  width: 100%;
-  max-width: 42rem;
-  height: 2.5rem;
-  margin-top: 2.5rem;
-  display: flex;
-  justify-content: space-between;
-}
-
-.input {
-  padding-left: 1rem;
-  padding-right: 1rem;
-  min-width: 0px;
-  flex: 1 1 auto;
-  border-radius: 0.375rem;
-  border-width: 1px;
-  border-color: rgb(209 213 219);
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.input:focus {
-  box-shadow: 1px 0 0 0 #888888;
-}
-
-.enter {
-  width: 7rem;
-  margin-left: 1rem;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-  color: white;
-  background-color: black;
-  border-color: black;
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 0.375rem;
-  width: 7rem;
-  cursor: pointer;
-  text-transform: none;
-}
-
-.enter:hover {
-  color: black;
-  background-color: white;
-  border-color: white;
-}
-
-.selectc {
-  width: 10rem;
-}
-
-.selectcg {
-  width: 10rem;
-}
-
-.container {
-  margin-left: auto;
-  margin-right: auto;
-  padding: 2rem 6rem;
-}
-
-.task_grid {
-  max-width: none;
-  margin-left: 0px;
-  margin-right: 0px;
-  margin-top: 4rem;
-  gap: 1.5rem;
-  display: grid;
-  grid-template-columns: repeat(4, minmax(0px, 1fr));
-}
-
-.card {
-  background-color: rgb(24 24 27);
-  border-width: 1px;
-  border-radius: 0.5rem;
-  box-shadow: 1px 1px 2px 2px white;
-}
-
-.card_body {
-  padding: 1.5rem;
-}
-
-.title {
-  color: white;
-  line-height: 1.5rem;
-  font-size: 1.5rem;
-  font-weight: 600;
-}
-
-.line {
-  margin-top: 1rem;
-  color: rgb(212 212 216);
-}
-
-.submit {
-  width: 100%;
-  margin-top: 2rem;
+  width: 100vw;
 }
