--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,4 +1,18 @@
 .main {
-  padding: 4rem;
+  padding: 0 4rem 4rem 4rem;
   width: 100vw;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.title {
+  color: white;
+}
+
+.desc {
+  color: gray;
+  width: 48rem;
+  line-height: 1.3;
+  padding-bottom: 2rem;
 }
